fixes wrong font import

--- a/assets/sass/base/_fonts.scss
+++ b/assets/sass/base/_fonts.scss
@@ -33,14 +33,14 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("~@/assets/fonts/Lato-light.ttf") format("truetype");
+  src: url("~@/assets/fonts/Lato-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("~@/assets/fonts/Lato-lightItalic.ttf") format("truetype");
+  src: url("~@/assets/fonts/Lato-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
